# Ma-sante-en-chaine

./: README.md  documentation.md  ipfs.md  migrationipfs.md  package-lock.json
backend/: .env  .env.example  README.md  package-lock.json  package.json
backend/src/: app.js  index.js  mongo.js
backend/src/config/: env.js  events.js  roles.js
backend/src/middleware/: auth.js  errorHandler.js  requestContext.js  requestSignature.js
backend/src/models/: AuditLog.js  AuthNonce.js  BlockchainAnchor.js  InsuranceClaim.js  MedicalDocument.js  MedicalEvent.js  PrescriptionLifecycleEvent.js  PrescriptionRecord.js  RequestNonce.js  WalletIdentity.js  WalletRole.js
backend/src/routes/: admin.js  auth.js  claims.js  documents.js  events.js  hopital.js  labo.js  medicalEventsSecure.js  prescriptions.js  records.js
backend/src/services/: auditService.js  blockchainService.js  identityService.js  roleService.js
backend/src/utils/: encryption.js  hash.js  jwt.js  signature.js
backend/test/: identityService.test.js
blockchain-api/: README.md  package-lock.json  package.json
blockchain-api/src/: index.js
frontend/: README.md  eslint.config.mjs  package-lock.json  package.json
frontend/src/app/: globals.css  page.tsx
frontend/src/app/dashboard/: layout.tsx
frontend/src/app/login/: page.tsx
frontend/src/lib/: api.ts  ipfsClient.ts  medicalCrypto.ts  session.ts  wallet.ts
scripts/: migrate_all_mongo_to_ipfs.py  migrate_mongo_to_ipfs.py
smart-contracts/: Cargo.toml  medical_event.rs  ordonnance.rs
smart-contracts/src/: lib.rs
(+7 files in other folders)
